--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "fetch": "^1.1.0",
-    "log4js": "^6.9.1"
+    "log4js": "^6.9.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "babel-jest": "^29.6.2",
