--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
